--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,4 +29,4 @@ jobs:
         run: |
           echo "$SSH_KEY" > id_rsa
           chmod 600 id_rsa
-          ssh -o StrictHostKeyChecking=no -i id_rsa $SSH_USER@$SSH_HOST 'cd D:\NAM4_HK2\CHUYENDE\services> && docker-compose pull && docker-compose up -d'
+          ssh -o StrictHostKeyChecking=no -i id_rsa $SSH_USER@$SSH_HOST 'cd D:/NAM4_HK2/CHUYENDE/services> && docker-compose pull && docker-compose up -d'
