--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,3 +1,22 @@
+# name: CI/CD
+
+# on:
+#   push:
+#     branches: [ "master" ]
+#   pull_request:
+#     branches: [ "master" ]
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@main
+    
+#       - name: Build Docker
+#         run: docker compose up --build -d 
+  
 name: CI/CD
 
 on:
@@ -11,9 +30,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@main
+      - name: Checkout code
+        uses: actions/checkout@main
     
       - name: Build Docker
-        run: docker compose up --build -d 
+        run: docker-compose up --build -d 
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+    
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
   
   
