--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,6 +36,12 @@ jobs:
       - name: Build Docker
         run: docker-compose up --build -d 
 
+      - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: github-pages
+        path: build/
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -54,7 +60,7 @@ jobs:
         uses: actions/deploy-pages@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          ACTIONS_DEPLOY_ACCESS_TOKEN: ${{ secrets.ACTIONS_ID_TOKEN_REQUEST_URL }}
+          
     
     
   
