--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,10 +37,8 @@ jobs:
         run: docker-compose up --build -d 
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: github-pages
-          path: build/
+        uses: actions/upload-pages-artifact@v3
+        
 
   deploy:
     runs-on: ubuntu-latest
