--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,6 +17,48 @@
 #       - name: Build Docker
 #         run: docker compose up --build -d 
   
+# name: CI/CD
+
+# on:
+#   push:
+#     branches: [ "master" ]
+#   pull_request:
+#     branches: [ "master" ]
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
+    
+#       - name: Build Docker
+#         run: docker-compose up --build -d 
+
+#       - name: Upload artifact
+#         uses: actions/upload-pages-artifact@v3
+        
+
+#   deploy:
+#     runs-on: ubuntu-latest
+#     needs: build
+
+#     permissions:
+#       pages: write      # to deploy to Pages
+#       id-token: write   # to verify the deployment originates from an appropriate source
+
+#     environment:
+#       name: github-pages
+#       url: ${{ steps.deployment.outputs.page_url }}
+
+#     steps:
+#       - name: Deploy to GitHub Pages
+#         id: deployment
+#         uses: actions/deploy-pages@v3
+#         with:
+#           token: ${{ secrets.GITHUB_TOKEN }}
+          
 name: CI/CD
 
 on:
@@ -26,19 +68,22 @@ on:
     branches: [ "master" ]
 
 jobs:
+
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
     
-      - name: Build Docker
-        run: docker-compose up --build -d 
+    - name: Build Docker
+      run: docker-compose up --build -d
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        
+    - name: Upload artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: docker-image
+        path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -53,13 +98,16 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          
-    
+    - name: Download Docker image
+      uses: actions/download-artifact@v3
+      with:
+        name: docker-image
+
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v3
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}  
     
   
   
