--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,64 +1,3 @@
-# name: CI/CD
-
-# on:
-#   push:
-#     branches: [ "master" ]
-#   pull_request:
-#     branches: [ "master" ]
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@main
-    
-#       - name: Build Docker
-#         run: docker compose up --build -d 
-  
-# name: CI/CD
-
-# on:
-#   push:
-#     branches: [ "master" ]
-#   pull_request:
-#     branches: [ "master" ]
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v3
-    
-#       - name: Build Docker
-#         run: docker-compose up --build -d 
-
-#       - name: Upload artifact
-#         uses: actions/upload-pages-artifact@v3
-        
-
-#   deploy:
-#     runs-on: ubuntu-latest
-#     needs: build
-
-#     permissions:
-#       pages: write      # to deploy to Pages
-#       id-token: write   # to verify the deployment originates from an appropriate source
-
-#     environment:
-#       name: github-pages
-#       url: ${{ steps.deployment.outputs.page_url }}
-
-#     steps:
-#       - name: Deploy to GitHub Pages
-#         id: deployment
-#         uses: actions/deploy-pages@v3
-#         with:
-#           token: ${{ secrets.GITHUB_TOKEN }}
-          
 name: CI/CD
 
 on:
@@ -68,45 +7,17 @@ on:
     branches: [ "master" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@main
     
-    - name: Build Docker
-      run: docker-compose up --build -d
-      
-    - name: Copy output directory
-      run: |
-        docker cp my-container:/app/_site _site
-        
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v3
-      with:
-        name: github-pages
-        path: _site/
-        retention-days: 1
-        
-  deploy:
-    needs: build
-    permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
-    
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v3
-    
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v1
+      - name: Build Docker
+        run: docker compose up --build -d 
+  
+
       
     
   
